# veldrid-spirv

./: .gitmodules  CMakeLists.txt  Directory.Build.props  README.md  build-full-package.ps1  build-local-package.sh  build-native.cmd  build-native.sh
.github/workflows/: build.yml
ext/: sync-shaderc.cmd  update_shaderc_sources.py
src/: Veldrid.SPIRV.sln
src/Veldrid.SPIRV/: NativeMacroDefinition.cs  SpirvCompilation.cs  Veldrid.SPIRV.csproj
src/Veldrid.SPIRV.Tests/: Veldrid.SPIRV.Tests.csproj
